--- a/package.json
+++ b/package.json
@@ -7,12 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "lint:check": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore",
-    "test:unit": "vitest",
-    "test:e2e": "cypress open",
-    "test:e2e:ci": "cypress run"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.1",
@@ -23,37 +18,24 @@
     "js-beautify": "^1.14.11",
     "vue": "^3.4.13",
     "vue-codemirror": "^6.1.1",
-    "vue-i18n": "^9.9.0",
-    "vue-router": "^4.2.5",
+    "vue-i18n": "^11.2.8",
+    "vue-router": "^5.0.1",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.7.0",
-    "@vitejs/plugin-vue": "^5.0.3",
-    "@vue/test-utils": "^2.4.4",
-    "cypress": "^13.6.3",
-    "eslint": "^8.56.0",
-    "eslint-plugin-cypress": "^2.15.1",
-    "eslint-plugin-vue": "^9.20.1",
-    "jsdom": "^23.2.0",
+    "@vitejs/plugin-vue": "^6.0.3",
     "less": "^4.5.1",
-    "lint-staged": "^15.2.0",
-    "sass": "^1.70.0",
     "terser": "^5.46.0",
+    "typescript": "^5.7.0",
     "unplugin-auto-import": "^21.0.0",
     "unplugin-vue-components": "^31.0.0",
-    "vite": "^5.0.11",
-    "vitest": "^1.2.1"
+    "vite": "^7.3.1",
+    "vue-tsc": "^2.2.0"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
     "not dead",
     "not ie 11"
-  ],
-  "lint-staged": {
-    "*.{js,jsx,vue,ts,tsx}": [
-      "eslint --fix"
-    ]
-  }
+  ]
 }
