--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "codemirror": "^6.0.1",
     "element-plus": "^2.5.1",
     "js-beautify": "^1.14.11",
+    "jsonrepair": "^3.13.2",
     "vue": "^3.4.13",
     "vue-codemirror": "^6.1.1",
     "vue-i18n": "^11.2.8",
